--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -117,6 +117,7 @@
     <ClInclude Include="cSceneChangeEffectUpDown.h" />
     <ClInclude Include="cScene_BoundBoxTool.h" />
     <ClInclude Include="cScene_Mgr.h" />
+    <ClInclude Include="cScene_testMonster.h" />
     <ClInclude Include="cScene_testPlayer.h" />
     <ClInclude Include="cSetBoundObject.h" />
     <ClInclude Include="cSingletonBase.h" />
@@ -183,6 +184,7 @@
     <ClCompile Include="cSceneChangeEffectUpDown.cpp" />
     <ClCompile Include="cScene_BoundBoxTool.cpp" />
     <ClCompile Include="cScene_Mgr.cpp" />
+    <ClCompile Include="cScene_testMonster.cpp" />
     <ClCompile Include="cScene_testPlayer.cpp" />
     <ClCompile Include="cSetBoundObject.cpp" />
     <ClCompile Include="cSingletonBase.cpp" />
