--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -34,15 +34,9 @@
     <Filter Include="Component">
       <UniqueIdentifier>{8d2a1705-2813-409f-9e6c-6b5d6da36a26}</UniqueIdentifier>
     </Filter>
-<<<<<<< HEAD
-=======
     <Filter Include="ObjClass">
       <UniqueIdentifier>{d3a61c23-fd41-4ccc-8701-141554358b36}</UniqueIdentifier>
     </Filter>
-    <Filter Include="JiHotest">
-      <UniqueIdentifier>{445f4c23-1c39-434a-8f5b-cf642451f236}</UniqueIdentifier>
-    </Filter>
->>>>>>> origin/master
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -52,6 +46,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="cMainGame.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="cImage.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="cTimeMgr.h">
@@ -117,6 +114,12 @@
     <ClInclude Include="cBaseObject.h">
       <Filter>BaseObject</Filter>
     </ClInclude>
+    <ClInclude Include="cBoundSphere.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="cBoundBox.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
     <ClInclude Include="cPhysicManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
@@ -150,6 +153,9 @@
     <ClInclude Include="cQuadParticleEmitter.h">
       <Filter>Common</Filter>
     </ClInclude>
+    <ClInclude Include="cFrustum.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
     <ClInclude Include="cScene_Mgr.h">
       <Filter>Managers</Filter>
     </ClInclude>
@@ -158,6 +164,9 @@
     </ClInclude>
     <ClInclude Include="cSceneChangeEffectUpDown.h">
       <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="move_Test.h">
+      <Filter>Scenes</Filter>
     </ClInclude>
     <ClInclude Include="t_Scene.h">
       <Filter>Scenes</Filter>
@@ -171,6 +180,9 @@
     <ClInclude Include="cCommand.h">
       <Filter>Handler</Filter>
     </ClInclude>
+    <ClInclude Include="cScene_testPlayer.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
     <ClInclude Include="cPlayer.h">
       <Filter>GameActor</Filter>
     </ClInclude>
@@ -180,17 +192,44 @@
     <ClInclude Include="cTestCommand2.h">
       <Filter>Handler</Filter>
     </ClInclude>
+    <ClInclude Include="move_Test2.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
     <ClInclude Include="cMonster.h">
       <Filter>GameActor</Filter>
+    </ClInclude>
+    <ClInclude Include="animation_Test.h">
+      <Filter>Scenes</Filter>
     </ClInclude>
     <ClInclude Include="sector_Test.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="moveClass.h">
+      <Filter>GameActor</Filter>
+    </ClInclude>
     <ClInclude Include="cMage.h">
       <Filter>GameActor</Filter>
     </ClInclude>
-    <ClInclude Include="cBaseskill.h">
-      <Filter>Component</Filter>
+    <ClInclude Include="cWayPoint.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="mage_Test.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="cSkillUi.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="cBerserker.h">
+      <Filter>GameActor</Filter>
+    </ClInclude>
+    <ClInclude Include="berserker_test.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="cScene_testMonster.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="cScene_BoundBoxTool.h">
+      <Filter>Scenes</Filter>
     </ClInclude>
     <ClInclude Include="cSpriteManager.h">
       <Filter>Managers</Filter>
@@ -198,56 +237,20 @@
     <ClInclude Include="cSoundManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
-    <ClInclude Include="mage_Test.h">
-      <Filter>Scenes</Filter>
-    </ClInclude>
-    <ClInclude Include="cScene_BoundBoxTool.h">
-      <Filter>Scenes</Filter>
-    </ClInclude>
-    <ClInclude Include="cBoundBox.h">
-      <Filter>BaseObject</Filter>
-    </ClInclude>
-    <ClInclude Include="cBoundSphere.h">
-      <Filter>BaseObject</Filter>
-    </ClInclude>
-    <ClInclude Include="cFrustum.h">
-      <Filter>Common</Filter>
-    </ClInclude>
-    <ClInclude Include="cWayPoint.h">
-      <Filter>Component</Filter>
-    </ClInclude>
-    <ClInclude Include="moveClass.h">
-      <Filter>Component</Filter>
-    </ClInclude>
     <ClInclude Include="monster_Test.h">
       <Filter>Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="cImage.h">
-      <Filter>Common</Filter>
+    <ClInclude Include="cBerserKer_Attack.h">
+      <Filter>Handler</Filter>
     </ClInclude>
-    <ClInclude Include="cScene_testMonster.h">
-      <Filter>Scenes</Filter>
+    <ClInclude Include="cBaseskill.h">
+      <Filter>Handler</Filter>
     </ClInclude>
-    <ClInclude Include="move_Test2.h">
-      <Filter>JiHotest</Filter>
+    <ClInclude Include="cBerserKer_Attack2.h">
+      <Filter>Handler</Filter>
     </ClInclude>
-    <ClInclude Include="move_Test.h">
-      <Filter>JiHotest</Filter>
-    </ClInclude>
-    <ClInclude Include="animation_Test.h">
-      <Filter>Scenes</Filter>
-    </ClInclude>
-    <ClInclude Include="cScene_testPlayer.h">
-      <Filter>Scenes</Filter>
-    </ClInclude>
-    <ClInclude Include="cSkillUi.h">
-      <Filter>Component</Filter>
-    </ClInclude>
-    <ClInclude Include="cBerserker.h">
-      <Filter>GameActor</Filter>
-    </ClInclude>
-    <ClInclude Include="berserker_test.h">
-      <Filter>Scenes</Filter>
+    <ClInclude Include="cBerserKer_Attack3.h">
+      <Filter>Handler</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -258,6 +261,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cMainGame.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cImage.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cTimeMgr.cpp">
@@ -323,6 +329,12 @@
     <ClCompile Include="cBaseObject.cpp">
       <Filter>BaseObject</Filter>
     </ClCompile>
+    <ClCompile Include="cBoundSphere.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cBoundBox.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="cPhysicManager.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
@@ -356,6 +368,9 @@
     <ClCompile Include="cQuadParticleEmitter.cpp">
       <Filter>Common</Filter>
     </ClCompile>
+    <ClCompile Include="cFrustum.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="cScene_Mgr.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
@@ -368,6 +383,9 @@
     <ClCompile Include="t_Scene.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
+    <ClCompile Include="move_Test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
     <ClCompile Include="cInputHandler.cpp">
       <Filter>Handler</Filter>
     </ClCompile>
@@ -376,6 +394,9 @@
     </ClCompile>
     <ClCompile Include="cCommand.cpp">
       <Filter>Handler</Filter>
+    </ClCompile>
+    <ClCompile Include="cScene_testPlayer.cpp">
+      <Filter>Scenes</Filter>
     </ClCompile>
     <ClCompile Include="cPlayer.cpp">
       <Filter>GameActor</Filter>
@@ -386,17 +407,41 @@
     <ClCompile Include="cTestCommand2.cpp">
       <Filter>Handler</Filter>
     </ClCompile>
+    <ClCompile Include="move_Test2.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
     <ClCompile Include="cMonster.cpp">
       <Filter>GameActor</Filter>
+    </ClCompile>
+    <ClCompile Include="animation_Test.cpp">
+      <Filter>Scenes</Filter>
     </ClCompile>
     <ClCompile Include="sector_Test.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
+    <ClCompile Include="moveClass.cpp">
+      <Filter>GameActor</Filter>
+    </ClCompile>
     <ClCompile Include="cMage.cpp">
       <Filter>GameActor</Filter>
     </ClCompile>
-    <ClCompile Include="cBaseskill.cpp">
-      <Filter>Component</Filter>
+    <ClCompile Include="cWayPoint.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cSkillUi.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cBerserker.cpp">
+      <Filter>GameActor</Filter>
+    </ClCompile>
+    <ClCompile Include="berserker_test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="cScene_testMonster.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="cScene_BoundBoxTool.cpp">
+      <Filter>Scenes</Filter>
     </ClCompile>
     <ClCompile Include="cSpriteManager.cpp">
       <Filter>Managers</Filter>
@@ -404,56 +449,23 @@
     <ClCompile Include="cSoundManager.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
-    <ClCompile Include="mage_Test.cpp">
-      <Filter>Scenes</Filter>
-    </ClCompile>
-    <ClCompile Include="cScene_BoundBoxTool.cpp">
-      <Filter>Scenes</Filter>
-    </ClCompile>
-    <ClCompile Include="cBoundBox.cpp">
-      <Filter>BaseObject</Filter>
-    </ClCompile>
-    <ClCompile Include="cBoundSphere.cpp">
-      <Filter>BaseObject</Filter>
-    </ClCompile>
-    <ClCompile Include="cFrustum.cpp">
-      <Filter>Common</Filter>
-    </ClCompile>
-    <ClCompile Include="cWayPoint.cpp">
-      <Filter>Component</Filter>
-    </ClCompile>
-    <ClCompile Include="moveClass.cpp">
-      <Filter>Component</Filter>
-    </ClCompile>
     <ClCompile Include="monster_Test.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="cImage.cpp">
-      <Filter>Common</Filter>
-    </ClCompile>
-    <ClCompile Include="cScene_testMonster.cpp">
+    <ClCompile Include="mage_Test.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="move_Test2.cpp">
-      <Filter>JiHotest</Filter>
+    <ClCompile Include="cBerserKer_Attack.cpp">
+      <Filter>Handler</Filter>
     </ClCompile>
-    <ClCompile Include="move_Test.cpp">
-      <Filter>JiHotest</Filter>
+    <ClCompile Include="cBaseskill.cpp">
+      <Filter>Handler</Filter>
     </ClCompile>
-    <ClCompile Include="animation_Test.cpp">
-      <Filter>Scenes</Filter>
+    <ClCompile Include="cBerserKer_Attack2.cpp">
+      <Filter>Handler</Filter>
     </ClCompile>
-    <ClCompile Include="cScene_testPlayer.cpp">
-      <Filter>Scenes</Filter>
-    </ClCompile>
-    <ClCompile Include="cSkillUi.cpp">
-      <Filter>Component</Filter>
-    </ClCompile>
-    <ClCompile Include="cBerserker.cpp">
-      <Filter>GameActor</Filter>
-    </ClCompile>
-    <ClCompile Include="berserker_test.cpp">
-      <Filter>Scenes</Filter>
+    <ClCompile Include="cBerserKer_Attack3.cpp">
+      <Filter>Handler</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
