--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="cGizmoManager.h" />
     <ClInclude Include="cImage.h" />
     <ClInclude Include="cInputHandler.h" />
+    <ClInclude Include="cInven.h" />
     <ClInclude Include="cItem.h" />
     <ClInclude Include="cItemManager.h" />
     <ClInclude Include="cKeyMgr.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="cGizmoManager.cpp" />
     <ClCompile Include="cImage.cpp" />
     <ClCompile Include="cInputHandler.cpp" />
+    <ClCompile Include="cInven.cpp" />
     <ClCompile Include="cItem.cpp" />
     <ClCompile Include="cItemManager.cpp" />
     <ClCompile Include="cKeyMgr.cpp" />
