--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -28,14 +28,20 @@
     <Filter Include="Handler">
       <UniqueIdentifier>{3829eae1-802e-4bf9-a6a0-1f7937c7218b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GameActor">
-      <UniqueIdentifier>{485420e6-2a98-48de-afd1-6d5503dc3252}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Component">
       <UniqueIdentifier>{8d2a1705-2813-409f-9e6c-6b5d6da36a26}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ObjClass">
-      <UniqueIdentifier>{d3a61c23-fd41-4ccc-8701-141554358b36}</UniqueIdentifier>
+    <Filter Include="GameActor">
+      <UniqueIdentifier>{485420e6-2a98-48de-afd1-6d5503dc3252}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameActor\Player">
+      <UniqueIdentifier>{0240fa50-2388-4545-bcc6-6dbb7652936f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameActor\Monster">
+      <UniqueIdentifier>{f3f3eabc-ddd8-41bc-94cf-d9fa026dc85e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameActor\Pet">
+      <UniqueIdentifier>{a7ba2d61-c162-4653-ad89-2d7b1b05d421}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -46,9 +52,6 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="cMainGame.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="cImage.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="cTimeMgr.h">
@@ -114,12 +117,6 @@
     <ClInclude Include="cBaseObject.h">
       <Filter>BaseObject</Filter>
     </ClInclude>
-    <ClInclude Include="cBoundSphere.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="cBoundBox.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="cPhysicManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
@@ -153,9 +150,6 @@
     <ClInclude Include="cQuadParticleEmitter.h">
       <Filter>Common</Filter>
     </ClInclude>
-    <ClInclude Include="cFrustum.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="cScene_Mgr.h">
       <Filter>Managers</Filter>
     </ClInclude>
@@ -183,9 +177,6 @@
     <ClInclude Include="cScene_testPlayer.h">
       <Filter>Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="cPlayer.h">
-      <Filter>GameActor</Filter>
-    </ClInclude>
     <ClInclude Include="cTestCommand.h">
       <Filter>Handler</Filter>
     </ClInclude>
@@ -195,38 +186,14 @@
     <ClInclude Include="move_Test2.h">
       <Filter>Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="cMonster.h">
-      <Filter>GameActor</Filter>
-    </ClInclude>
     <ClInclude Include="animation_Test.h">
       <Filter>Scenes</Filter>
     </ClInclude>
     <ClInclude Include="sector_Test.h">
       <Filter>Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="moveClass.h">
-      <Filter>GameActor</Filter>
-    </ClInclude>
-    <ClInclude Include="cMage.h">
-      <Filter>GameActor</Filter>
-    </ClInclude>
-    <ClInclude Include="cWayPoint.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="cSkillUi.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="cBerserker.h">
-      <Filter>GameActor</Filter>
-    </ClInclude>
-    <ClInclude Include="berserker_test.h">
-      <Filter>Scenes</Filter>
-    </ClInclude>
-    <ClInclude Include="cScene_testMonster.h">
-      <Filter>Scenes</Filter>
-    </ClInclude>
-    <ClInclude Include="cScene_BoundBoxTool.h">
-      <Filter>Scenes</Filter>
+    <ClInclude Include="cBaseskill.h">
+      <Filter>Component</Filter>
     </ClInclude>
     <ClInclude Include="cSpriteManager.h">
       <Filter>Managers</Filter>
@@ -234,32 +201,80 @@
     <ClInclude Include="cSoundManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
-    <ClInclude Include="monster_Test.h">
-      <Filter>Scenes</Filter>
-    </ClInclude>
-    <ClInclude Include="cBaseskill.h">
-      <Filter>Handler</Filter>
-    </ClInclude>
-    <ClInclude Include="cItem.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="cItemManager.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="cPet.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="cWeapon.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="mage_Test.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="cScene_BoundBoxTool.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="cBoundBox.h">
+      <Filter>BaseObject</Filter>
+    </ClInclude>
+    <ClInclude Include="cBoundSphere.h">
+      <Filter>BaseObject</Filter>
+    </ClInclude>
+    <ClInclude Include="cFrustum.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="cWayPoint.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="moveClass.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="monster_Test.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="cImage.h">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="cScene_testMonster.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="cBerserKer_Attack.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="cBerserKer_Attack2.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="cBerserKer_Attack3.h">
+      <Filter>Component</Filter>
+    </ClInclude>
     <ClInclude Include="cInven.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="cItem.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="cItemManager.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="cSkillUi.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="cWeapon.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="berserker_test.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="cBerserker.h">
+      <Filter>GameActor\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="cMage.h">
+      <Filter>GameActor\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="cPet.h">
+      <Filter>GameActor\Pet</Filter>
+    </ClInclude>
+    <ClInclude Include="cMonster.h">
+      <Filter>GameActor\Monster</Filter>
+    </ClInclude>
+    <ClInclude Include="cPlayer.h">
+      <Filter>GameActor\Player</Filter>
     </ClInclude>
     <ClInclude Include="cSpider.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>GameActor\Monster</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -270,9 +285,6 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cMainGame.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="cImage.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cTimeMgr.cpp">
@@ -338,12 +350,6 @@
     <ClCompile Include="cBaseObject.cpp">
       <Filter>BaseObject</Filter>
     </ClCompile>
-    <ClCompile Include="cBoundSphere.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="cBoundBox.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="cPhysicManager.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
@@ -377,9 +383,6 @@
     <ClCompile Include="cQuadParticleEmitter.cpp">
       <Filter>Common</Filter>
     </ClCompile>
-    <ClCompile Include="cFrustum.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="cScene_Mgr.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
@@ -407,9 +410,6 @@
     <ClCompile Include="cScene_testPlayer.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="cPlayer.cpp">
-      <Filter>GameActor</Filter>
-    </ClCompile>
     <ClCompile Include="cTestCommand.cpp">
       <Filter>Handler</Filter>
     </ClCompile>
@@ -419,38 +419,14 @@
     <ClCompile Include="move_Test2.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="cMonster.cpp">
-      <Filter>GameActor</Filter>
-    </ClCompile>
     <ClCompile Include="animation_Test.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
     <ClCompile Include="sector_Test.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="moveClass.cpp">
-      <Filter>GameActor</Filter>
-    </ClCompile>
-    <ClCompile Include="cMage.cpp">
-      <Filter>GameActor</Filter>
-    </ClCompile>
-    <ClCompile Include="cWayPoint.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="cSkillUi.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="cBerserker.cpp">
-      <Filter>GameActor</Filter>
-    </ClCompile>
-    <ClCompile Include="berserker_test.cpp">
-      <Filter>Scenes</Filter>
-    </ClCompile>
-    <ClCompile Include="cScene_testMonster.cpp">
-      <Filter>Scenes</Filter>
-    </ClCompile>
-    <ClCompile Include="cScene_BoundBoxTool.cpp">
-      <Filter>Scenes</Filter>
+    <ClCompile Include="cBaseskill.cpp">
+      <Filter>Component</Filter>
     </ClCompile>
     <ClCompile Include="cSpriteManager.cpp">
       <Filter>Managers</Filter>
@@ -458,32 +434,80 @@
     <ClCompile Include="cSoundManager.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
-    <ClCompile Include="monster_Test.cpp">
-      <Filter>Scenes</Filter>
-    </ClCompile>
     <ClCompile Include="mage_Test.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="cBaseskill.cpp">
-      <Filter>Handler</Filter>
+    <ClCompile Include="cScene_BoundBoxTool.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="cBoundBox.cpp">
+      <Filter>BaseObject</Filter>
+    </ClCompile>
+    <ClCompile Include="cBoundSphere.cpp">
+      <Filter>BaseObject</Filter>
+    </ClCompile>
+    <ClCompile Include="cFrustum.cpp">
+      <Filter>Common</Filter>
+    </ClCompile>
+    <ClCompile Include="cWayPoint.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="moveClass.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="monster_Test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="cImage.cpp">
+      <Filter>Common</Filter>
+    </ClCompile>
+    <ClCompile Include="cScene_testMonster.cpp">
+      <Filter>Scenes</Filter>
     </ClCompile>
     <ClCompile Include="cItem.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>Component</Filter>
     </ClCompile>
     <ClCompile Include="cItemManager.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="cPet.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="cWeapon.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>Component</Filter>
     </ClCompile>
     <ClCompile Include="cInven.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="cBerserKer_Attack3.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="cBerserKer_Attack2.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="cBerserKer_Attack.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="cWeapon.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="cSkillUi.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="berserker_test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="cBerserker.cpp">
+      <Filter>GameActor\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="cMage.cpp">
+      <Filter>GameActor\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="cPet.cpp">
+      <Filter>GameActor\Pet</Filter>
+    </ClCompile>
+    <ClCompile Include="cMonster.cpp">
+      <Filter>GameActor\Monster</Filter>
+    </ClCompile>
+    <ClCompile Include="cPlayer.cpp">
+      <Filter>GameActor\Player</Filter>
     </ClCompile>
     <ClCompile Include="cSpider.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>GameActor\Monster</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
